# access-os-installer

./: AGENTS.md  Cargo.toml  PKGBUILD  README.md  access-os-installer.desktop
assets/: startup-digital-pluck.LICENSE.md
cli/: Cargo.toml
cli/src/: main.rs  wizard.rs
crates/installer-core/: Cargo.toml
docs/plans/: 2026-02-27-access-os-installer-design.md  2026-02-27-completion-and-disk-safety-design.md  2026-02-27-completion-and-disk-safety-implementation.md  2026-02-27-picker-sound-design.md  2026-02-27-picker-sound-implementation.md  2026-02-27-preflight-review-design.md  2026-02-27-preflight-review-implementation.md  2026-03-03-base-packages-main-repo-audit.md  2026-03-03-old-installer-parity-phase1-disk-setup-design.md  2026-03-03-old-installer-parity-phase1-disk-setup-implementation.md  2026-03-04-gtk-a11y-parity-design.md  2026-03-04-gtk-a11y-parity-implementation.md  2026-03-04-multi-installer-cli-calamares-design.md  2026-03-04-multi-installer-cli-calamares-implementation.md  2026-03-06-cli-manual-partition-manager-design.md  2026-03-06-cli-manual-partition-manager-implementation.md  (+14 more)
gtk/: Cargo.toml
gtk/src/: main.rs
gtk/src/app/: bootstrap.rs  constants.rs  state.rs
gtk/src/backend/: config_engine.rs  mod.rs  preflight.rs
gtk/src/mappers/: storage.rs
gtk/src/services/: log.rs  mod.rs  mount.rs
gtk/src/ui/common/: layout.rs  mod.rs
gtk/src/ui/steps/: de.rs  disk_setup.rs  install.rs  review.rs  wifi.rs
packaging/: install-access
profiles/: base.txt  gnome.txt  kde.txt  niri.txt  server.txt
src/: main.rs
src/app/: bootstrap.rs  mod.rs  (+1 more)
(+32 files in other folders)
