[package]
name = "access-os-installer"
version = "0.1.0"
edition = "2021"
description = "A GTK4 based installer for access-OS"
repository = "https://github.com/Boo15mario/access-os-installer"

[dependencies]
gtk4 = "0.7.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.30"
